# pyclicker

./: .gitignore  pyproject.toml  ruff.toml
src/pyclicker/: cli.py
