[project]
name = "pyclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
]

[project.scripts]
pyclicker = "pyclicker.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
